# AndroidTinyToolsFor1C

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AddInNative.cpp  AddInNative.h  BluetoothBarcodeScannerHandler.cpp  BluetoothBarcodeScannerHandler.h  BroadcastReceiver.cpp  BroadcastReceiver.h  StrConv.cpp  StrConv.h  jnienv.cpp
app/src/main/java/com/alexkmbk/androidtinytools/: BeepClass.java  BluetoothBarcodeScannerHandlerClass.java  BluetoothClass.java  BroadcastReceiverClass.java  Constants.java  LibActivity.java  ToastClass.java  Utils.java  VibrateClass.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
